Solve exercise 1 from task 2

--- a/task2/hwk2-task2-salmon.ipynb
+++ b/task2/hwk2-task2-salmon.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
     "- First, update the following cell to have a link to *your* Homework 2 GitHub repository:\n",
     "\n",
     "**UPDATE THIS LINK**\n",
-    "https://github.com/MEDS-eds-220/eds220-hwk2\n",
+    "https://github.com/hylaea-miller/eds220-hwk2.git\n",
     "\n",
     "\n",
     "- Review the [complete rubric for this task](https://docs.google.com/document/d/1x0BoU6IH4cnOR1-n7i9CYQ9wUC37yDpYlQ4j6rCfcsU/edit?tab=t.0) before starting.\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +103,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>notesRegCode</th>\n",
+       "      <th>Species</th>\n",
+       "      <th>Catch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SSE</td>\n",
+       "      <td>1886</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chinook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SSE</td>\n",
+       "      <td>1887</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chinook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SSE</td>\n",
+       "      <td>1888</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chinook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SSE</td>\n",
+       "      <td>1889</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chinook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SSE</td>\n",
+       "      <td>1890</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chinook</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Region  Year notesRegCode  Species Catch\n",
+       "0    SSE  1886          NaN  Chinook     0\n",
+       "1    SSE  1887          NaN  Chinook     0\n",
+       "2    SSE  1888          NaN  Chinook     0\n",
+       "3    SSE  1889          NaN  Chinook     0\n",
+       "4    SSE  1890          NaN  Chinook     0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# a.\n",
+    "# Import pandas library, load the salmon dataset from the 'data' folder and look at the head of the dataframe \n",
+    "import pandas as pd\n",
+    "catch_data = pd.read_csv('data/salmon_data.csv')\n",
     "\n",
-    "\n",
-    "catch_data = ...\n"
+    "catch_data.head()"
    ]
   },
   {
@@ -131,13 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8540, 5)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# b."
+    "# b.\n",
+    "# Use .shape to verify the number of rows and columns in the dataframe\n",
+    "catch_data.shape\n"
    ]
   },
   {
@@ -164,6 +267,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I chose to use `.shape` to check how extensive the dataset is and how many rows and columns it contains"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -179,11 +289,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ellipsis\n"
+     ]
+    }
+   ],
    "source": [
     "notes_unique = ...\n",
     "print(notes_unique)"
@@ -191,12 +309,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong style='color: red;'><pre style='display: inline;'>q2a</pre> results:</strong></p><p><strong><pre style='display: inline;'>q2a - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
+       "    Trying:\n",
+       "        len(notes_unique) == 30\n",
+       "    Expecting:\n",
+       "        True\n",
+       "    **********************************************************************\n",
+       "    Line 1, in q2a 0\n",
+       "    Failed example:\n",
+       "        len(notes_unique) == 30\n",
+       "    Exception raised:\n",
+       "        Traceback (most recent call last):\n",
+       "          File \"/opt/anaconda3/envs/eds220-env/lib/python3.11/doctest.py\", line 1351, in __run\n",
+       "            exec(compile(example.source, filename, \"single\",\n",
+       "          File \"<doctest q2a 0[0]>\", line 1, in <module>\n",
+       "            len(notes_unique) == 30\n",
+       "            ^^^^^^^^^^^^^^^^^\n",
+       "        TypeError: object of type 'ellipsis' has no len()\n",
+       "</pre>"
+      ],
+      "text/plain": [
+       "q2a results:\n",
+       "    q2a - 1 result:\n",
+       "        ❌ Test case failed\n",
+       "        Trying:\n",
+       "            len(notes_unique) == 30\n",
+       "        Expecting:\n",
+       "            True\n",
+       "        **********************************************************************\n",
+       "        Line 1, in q2a 0\n",
+       "        Failed example:\n",
+       "            len(notes_unique) == 30\n",
+       "        Exception raised:\n",
+       "            Traceback (most recent call last):\n",
+       "              File \"/opt/anaconda3/envs/eds220-env/lib/python3.11/doctest.py\", line 1351, in __run\n",
+       "                exec(compile(example.source, filename, \"single\",\n",
+       "              File \"<doctest q2a 0[0]>\", line 1, in <module>\n",
+       "                len(notes_unique) == 30\n",
+       "                ^^^^^^^^^^^^^^^^^\n",
+       "            TypeError: object of type 'ellipsis' has no len()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2a\")"
    ]
@@ -213,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -224,12 +391,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q2b</pre></strong> passed! 🎉</p>"
+      ],
+      "text/plain": [
+       "q2b results: All test cases passed!"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q2b\")"
    ]
@@ -249,19 +430,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "_Type your answer here, replacing this text._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "..."
    ]
@@ -285,11 +479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'ellipsis' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcatch_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mCatch\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint64\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'ellipsis' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "catch_data['Catch'].astype('int64')"
    ]
@@ -529,7 +735,8 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
-    "editable": false
+    "editable": false,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -539,9 +746,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EDS220",
    "language": "python",
-   "name": "python3"
+   "name": "eds220-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -553,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
