Solve exercises 2 and 3

--- a/task2/hwk2-task2-salmon.ipynb
+++ b/task2/hwk2-task2-salmon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -191,7 +191,7 @@
        "4    SSE  1890          NaN  Chinook     0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -232,7 +232,7 @@
        "(8540, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -298,18 +298,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ellipsis\n"
+      "[nan 'Includes Yakutat catches' 'Yakutat catch included in No SE AK catch'\n",
+      " 'Estimated from canned production, probably sockeye' 'No fishery'\n",
+      " 'Bering River catches included in Copper River catches'\n",
+      " 'Includes Bering River catches; estimated from canned'\n",
+      " 'Includes Bering River catches'\n",
+      " 'Coho and pink catch estimated from canned production'\n",
+      " 'Includes Bering River; coho and pink estimated fro canned'\n",
+      " 'Pink catch estimated from canned'\n",
+      " 'Includes Bering River; coho pink and chum estimated from canned'\n",
+      " 'Includes Bering River; pink estimated from canned'\n",
+      " 'Includes Bering River; pink and chum estimated from canned'\n",
+      " 'Includes Copper River catches'\n",
+      " 'Includes Copper River catches; coho catch porbably mostly pinks'\n",
+      " 'Eshamy District only' 'Estimated from canned; excludes Resurrection Bay'\n",
+      " 'Estimated from canned production' 'No Resurrection Bay fishery'\n",
+      " 'Resurrection bay contribution estimated from canned production'\n",
+      " 'No reported catch'\n",
+      " 'Sockeye and pink and 9922 chum from Port Clarence area'\n",
+      " 'Chinook and coho and chum estimated from canned production'\n",
+      " 'Pink catch includes some chums'\n",
+      " 'Pink and chum catch estimated form canned production'\n",
+      " 'Pink and chum catch estimated form canned production; from Castle Cp. To E. boundary'\n",
+      " 'Estimated from canned production; includes Aleautian Island catches'\n",
+      " 'Catches from Unalaksa to Castle Cape'\n",
+      " 'Catches included in S. peninsula catches or none']\n"
      ]
     }
    ],
    "source": [
-    "notes_unique = ...\n",
+    "# Get unique values from the notesRegCode column\n",
+    "notes_unique = catch_data['notesRegCode'].unique()\n",
     "print(notes_unique)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -318,48 +343,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>q2a</pre> results:</strong></p><p><strong><pre style='display: inline;'>q2a - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        len(notes_unique) == 30\n",
-       "    Expecting:\n",
-       "        True\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q2a 0\n",
-       "    Failed example:\n",
-       "        len(notes_unique) == 30\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"/opt/anaconda3/envs/eds220-env/lib/python3.11/doctest.py\", line 1351, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q2a 0[0]>\", line 1, in <module>\n",
-       "            len(notes_unique) == 30\n",
-       "            ^^^^^^^^^^^^^^^^^\n",
-       "        TypeError: object of type 'ellipsis' has no len()\n",
-       "</pre>"
+       "<p><strong><pre style='display: inline;'>q2a</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
-       "q2a results:\n",
-       "    q2a - 1 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            len(notes_unique) == 30\n",
-       "        Expecting:\n",
-       "            True\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q2a 0\n",
-       "        Failed example:\n",
-       "            len(notes_unique) == 30\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"/opt/anaconda3/envs/eds220-env/lib/python3.11/doctest.py\", line 1351, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q2a 0[0]>\", line 1, in <module>\n",
-       "                len(notes_unique) == 30\n",
-       "                ^^^^^^^^^^^^^^^^^\n",
-       "            TypeError: object of type 'ellipsis' has no len()"
+       "q2a results: All test cases passed!"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,18 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "catch_data = ..."
+    "# Remove the 'notesRegCode' column from the dataframe using .drop\n",
+    "catch_data = catch_data.drop(columns=['notesRegCode'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -400,13 +391,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q2b</pre></strong> passed! 🎉</p>"
+       "<p><strong><pre style='display: inline;'>q2b</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "q2b results: All test cases passed!"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,30 +425,31 @@
     "tags": []
    },
    "source": [
-    "_Type your answer here, replacing this text._"
+    "No, the Catch column should be numeric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true,
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ellipsis"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Region     object\n",
+      "Year        int64\n",
+      "Species    object\n",
+      "Catch      object\n",
+      "dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "..."
+    "print(catch_data.dtypes)"
    ]
   },
   {
