Solve exercises 1-4 from task 3

--- a/task3/hwk2-task3-aqi.ipynb
+++ b/task3/hwk2-task3-aqi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -27,7 +27,7 @@
     "- First, update the following cell to have a link to *your* Homework 2 GitHub repository:\n",
     "\n",
     "**UPDATE THIS LINK**\n",
-    "https://github.com/MEDS-eds-220/eds220-hwk2\n",
+    "https://github.com/hylaea-miller/eds220-hwk2.git\n",
     "\n",
     "\n",
     "- Review the [complete rubric for this task](https://docs.google.com/document/d/131OnUDOLpOl94SlaMU9nGqT998ABrjFS/edit?usp=sharing&ouid=111507336322611936333&rtpof=true&sd=true) before starting.\n",
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "\n",
+    "import pandas as pd\n",
     "# Read in data\n",
-    "aqi_17 = ...\n",
-    "aqi_18 = ..."
+    "aqi_17 = pd.read_csv(\"https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2017.zip\", compression=\"zip\")\n",
+    "aqi_18 = pd.read_csv(\"https://aqs.epa.gov/aqsweb/airdata/daily_aqi_by_county_2018.zip\", compression=\"zip\")"
    ]
   },
   {
@@ -147,19 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# a.\n",
-    "aqi_17_head = ..."
+    "# look at the head of the dataframe \n",
+    "aqi_17_head = aqi_17.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -167,17 +168,31 @@
    "outputs": [],
    "source": [
     "# b.\n",
-    "aqi_18_head = ..."
+    "aqi_18_head = aqi_18.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q3_a</pre></strong> passed! 🍀</p>"
+      ],
+      "text/plain": [
+       "q3_a results: All test cases passed!"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q3_a\")"
    ]
@@ -193,6 +208,28 @@
     "<!-- BEGIN QUESTION -->\n",
     "\n",
     "c. Use this code cell to make some other preliminary data exploration of your choosing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(326801, 10)\n",
+      "(327541, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use .shape to verify the number of rows and columns in the dataframe\n",
+    "print(aqi_17.shape)\n",
+    "print(aqi_18.shape)"
    ]
   },
   {
@@ -225,7 +262,9 @@
     "deletable": false,
     "editable": false
    },
-   "source": []
+   "source": [
+    "I chose to use `.shape` to check how extensive the dataset is and how many rows and columns it contains"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -247,24 +286,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State Name</th>\n",
+       "      <th>county Name</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>County Code</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>AQI</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Defining Parameter</th>\n",
+       "      <th>Defining Site</th>\n",
+       "      <th>Number of Sites Reporting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>29</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-13</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2017-01-16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>01-003-0010</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327536</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2018-12-27</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>56-045-0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327537</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2018-12-28</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>56-045-0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327538</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2018-12-29</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>56-045-0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327539</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2018-12-30</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>56-045-0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327540</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Weston</td>\n",
+       "      <td>56</td>\n",
+       "      <td>45</td>\n",
+       "      <td>2018-12-31</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>56-045-0003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>654342 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State Name county Name  State Code  County Code        Date  AQI  \\\n",
+       "0         Alabama     Baldwin           1            3  2017-01-01   28   \n",
+       "1         Alabama     Baldwin           1            3  2017-01-04   29   \n",
+       "2         Alabama     Baldwin           1            3  2017-01-10   25   \n",
+       "3         Alabama     Baldwin           1            3  2017-01-13   40   \n",
+       "4         Alabama     Baldwin           1            3  2017-01-16   22   \n",
+       "...           ...         ...         ...          ...         ...  ...   \n",
+       "327536    Wyoming      Weston          56           45  2018-12-27   36   \n",
+       "327537    Wyoming      Weston          56           45  2018-12-28   35   \n",
+       "327538    Wyoming      Weston          56           45  2018-12-29   35   \n",
+       "327539    Wyoming      Weston          56           45  2018-12-30   31   \n",
+       "327540    Wyoming      Weston          56           45  2018-12-31   35   \n",
+       "\n",
+       "       Category Defining Parameter Defining Site  Number of Sites Reporting  \n",
+       "0          Good              PM2.5   01-003-0010                          1  \n",
+       "1          Good              PM2.5   01-003-0010                          1  \n",
+       "2          Good              PM2.5   01-003-0010                          1  \n",
+       "3          Good              PM2.5   01-003-0010                          1  \n",
+       "4          Good              PM2.5   01-003-0010                          1  \n",
+       "...         ...                ...           ...                        ...  \n",
+       "327536     Good              Ozone   56-045-0003                          1  \n",
+       "327537     Good              Ozone   56-045-0003                          1  \n",
+       "327538     Good              Ozone   56-045-0003                          1  \n",
+       "327539     Good              Ozone   56-045-0003                          1  \n",
+       "327540     Good              Ozone   56-045-0003                          1  \n",
+       "\n",
+       "[654342 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "aqi = ...\n",
+    "aqi = pd.concat([aqi_17, aqi_18])\n",
     "aqi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q4</pre></strong> passed! 🌟</p>"
+      ],
+      "text/plain": [
+       "q4 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q4\")"
    ]
@@ -285,13 +555,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['state_name', 'county_name', 'state_code', 'county_code', 'date', 'aqi',\n",
+      "       'category', 'defining_parameter', 'defining_site',\n",
+      "       'number_of_sites_reporting'],\n",
+      "      dtype='object') \n",
+      "\n",
+      "Index(['state_name', 'county_name', 'state_code', 'county_code', 'date', 'aqi',\n",
+      "       'category', 'defining_parameter', 'defining_site',\n",
+      "       'number_of_sites_reporting'],\n",
+      "      dtype='object') \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Initial column names: notice caps and spaces (difficult to work with!)\n",
     "print(aqi.columns, '\\n')\n",
@@ -303,6 +590,11 @@
     "                )\n",
     "print(aqi.columns, '\\n')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -549,9 +841,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "EDS220",
    "language": "python",
-   "name": "python3"
+   "name": "eds220-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -563,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
