--- a/task3/hwk2-task3-aqi.ipynb
+++ b/task3/hwk2-task3-aqi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -182,13 +182,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_a</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q3_a</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q3_a results: All test cases passed!"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {
     "tags": []
    },
@@ -503,7 +503,7 @@
        "[654342 rows x 10 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -524,13 +524,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q4</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q4 results: All test cases passed!"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -788,7 +788,7 @@
        "[730 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -811,13 +811,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q6a</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q6a</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "q6a results: All test cases passed!"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,14 +849,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data type of the `date` column is an object."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                         object\n",
+       "aqi                           int64\n",
+       "category                     object\n",
+       "defining_parameter           object\n",
+       "defining_site                object\n",
+       "number_of_sites_reporting     int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "...\n"
+    "# Check the data types of columns in the dataframe\n",
+    "aqi_sb.dtypes\n"
    ]
   },
   {
@@ -876,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -886,10 +911,178 @@
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aqi</th>\n",
+       "      <th>category</th>\n",
+       "      <th>defining_parameter</th>\n",
+       "      <th>defining_site</th>\n",
+       "      <th>number_of_sites_reporting</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-01-01</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-4003</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-02</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>06-083-2011</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-03</th>\n",
+       "      <td>71</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>PM10</td>\n",
+       "      <td>06-083-4003</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-04</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-4003</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-01-05</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-4003</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-27</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-1025</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-28</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-1021</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-29</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-1021</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-30</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>PM2.5</td>\n",
+       "      <td>06-083-1008</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>Ozone</td>\n",
+       "      <td>06-083-2004</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>730 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            aqi  category defining_parameter defining_site  \\\n",
+       "date                                                         \n",
+       "2017-01-01   39      Good              Ozone   06-083-4003   \n",
+       "2017-01-02   39      Good              PM2.5   06-083-2011   \n",
+       "2017-01-03   71  Moderate               PM10   06-083-4003   \n",
+       "2017-01-04   34      Good              Ozone   06-083-4003   \n",
+       "2017-01-05   37      Good              Ozone   06-083-4003   \n",
+       "...         ...       ...                ...           ...   \n",
+       "2018-12-27   37      Good              Ozone   06-083-1025   \n",
+       "2018-12-28   39      Good              Ozone   06-083-1021   \n",
+       "2018-12-29   39      Good              Ozone   06-083-1021   \n",
+       "2018-12-30   41      Good              PM2.5   06-083-1008   \n",
+       "2018-12-31   38      Good              Ozone   06-083-2004   \n",
+       "\n",
+       "            number_of_sites_reporting  \n",
+       "date                                   \n",
+       "2017-01-01                         12  \n",
+       "2017-01-02                         11  \n",
+       "2017-01-03                         12  \n",
+       "2017-01-04                         13  \n",
+       "2017-01-05                         12  \n",
+       "...                               ...  \n",
+       "2018-12-27                         11  \n",
+       "2018-12-28                         12  \n",
+       "2018-12-29                         12  \n",
+       "2018-12-30                         12  \n",
+       "2018-12-31                         12  \n",
+       "\n",
+       "[730 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "aqi_sb.date = ...\n",
-    "aqi_sb = ...\n",
+    "# Convert date column to timestamps and set date column as index\n",
+    "aqi_sb.date = pd.to_datetime(aqi_sb.date)\n",
+    "aqi_sb = aqi_sb.set_index('date')\n",
     "aqi_sb"
    ]
   },
@@ -915,25 +1108,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                         datetime64[ns]\n",
+       "aqi                                   int64\n",
+       "category                             object\n",
+       "defining_parameter                   object\n",
+       "defining_site                        object\n",
+       "number_of_sites_reporting             int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aqi_sb.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2017-01-01    39.000000\n",
+       "2017-01-02    39.000000\n",
+       "2017-01-03    49.666667\n",
+       "2017-01-04    45.750000\n",
+       "2017-01-05    44.000000\n",
+       "                ...    \n",
+       "2018-12-27    41.200000\n",
+       "2018-12-28    38.600000\n",
+       "2018-12-29    38.200000\n",
+       "2018-12-30    38.200000\n",
+       "2018-12-31    38.800000\n",
+       "Name: aqi, Length: 730, dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate AQI rolling average over 5 days\n",
-    "rolling_average = \n",
+    "rolling_average = aqi_sb['aqi'].rolling('5D').mean()\n",
     "rolling_average"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q8</pre></strong> passed! 🍀</p>"
+      ],
+      "text/plain": [
+       "q8 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q8\")"
    ]
